# Generated by Django 6.0.3 on 2026-03-25 14:33

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='GameDefinition',
            fields=[
                ('game_key', models.CharField(max_length=64, primary_key=True, serialize=False)),
                ('display_name', models.CharField(max_length=100)),
                ('version', models.CharField(max_length=32)),
                ('category', models.CharField(max_length=64)),
                ('min_players', models.PositiveIntegerField()),
                ('max_players', models.PositiveIntegerField()),
                ('supports_spectators', models.BooleanField(default=True)),
                ('supports_pause', models.BooleanField(default=False)),
                ('supports_resume', models.BooleanField(default=False)),
                ('supports_bots', models.BooleanField(default=False)),
                ('supports_tournament', models.BooleanField(default=False)),
                ('supports_save_resume', models.BooleanField(default=False)),
                ('parameter_schema_json', models.JSONField(default=dict)),
                ('communication_policy_schema_json', models.JSONField(default=dict)),
                ('metadata_json', models.JSONField(default=dict)),
            ],
            options={
                'db_table': 'game_definition',
            },
        ),
    ]
