# Generated by Django 6.0.3 on 2026-04-03 04:46

import django.db.models.deletion
import uuid
from django.db import migrations, models


class Migration(migrations.Migration):

    dependencies = [
        ('rooms', '0004_room_is_permanent_room_name'),
    ]

    operations = [
        migrations.CreateModel(
            name='Proposal',
            fields=[
                ('proposal_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('proposal_type', models.CharField(max_length=64)),
                ('state', models.CharField(choices=[('open', 'Open'), ('accepted', 'Accepted'), ('rejected', 'Rejected'), ('expired', 'Expired'), ('cancelled', 'Cancelled')], default='open', max_length=32)),
                ('payload_json', models.JSONField(default=dict)),
                ('rules_json', models.JSONField(default=dict)),
                ('result_json', models.JSONField(default=dict)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('resolved_at', models.DateTimeField(blank=True, null=True)),
                ('expires_at', models.DateTimeField(blank=True, null=True)),
                ('created_by_participant', models.ForeignKey(on_delete=django.db.models.deletion.RESTRICT, related_name='created_proposals', to='rooms.participant')),
                ('room', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='proposals', to='rooms.room')),
            ],
            options={
                'db_table': 'proposal',
            },
        ),
        migrations.CreateModel(
            name='ProposalResponse',
            fields=[
                ('proposal_response_id', models.UUIDField(default=uuid.uuid4, editable=False, primary_key=True, serialize=False)),
                ('response', models.CharField(choices=[('pending', 'Pending'), ('yes', 'Yes'), ('no', 'No'), ('abstain', 'Abstain')], default='pending', max_length=16)),
                ('responded_at', models.DateTimeField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('participant', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='proposal_responses', to='rooms.participant')),
                ('proposal', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, related_name='responses', to='rooms.proposal')),
            ],
            options={
                'db_table': 'proposal_response',
                'constraints': [models.UniqueConstraint(fields=('proposal', 'participant'), name='uq_proposal_participant_response')],
            },
        ),
    ]
